ingress-nginx/ingress-arip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-arip
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nginx.arip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-arip
                port:
                  number: 80
    - host: apache.arip  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-arip
                port:
                  number: 80
